<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_malware_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/menu_malware_scan" />
        <item
            android:id="@+id/nav_settings_scan"
            android:icon="@drawable/ic_privatelock"
            android:title="@string/menu_privacy_settings" />
        <item
            android:id="@+id/nav_apps_info"
            android:icon="@drawable/ic_applist"
            android:title="@string/menu_apps_info" />
    </group>
</menu>
