<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name"
                android:textSize="14sp"
                android:textColor="@color/mainTextColor"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/appDetailPackageName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/subTextColor"
                android:textSize="12sp"
                android:text="@string/package_name"
                android:layout_alignParentEnd="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/subTextColor"
                android:alpha="0.3"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_status"
                android:textSize="14sp"
                android:textColor="@color/mainTextColor"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/appDetailAppStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/subTextColor"
                android:textSize="12sp"
                android:text="In Progress"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/subTextColor"
                android:alpha="0.3"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_install_date"
                android:textSize="14sp"
                android:textColor="@color/mainTextColor"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/appDetailInstallDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/subTextColor"
                android:textSize="12sp"
                android:text="Jul 12 2018"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/subTextColor"
                android:alpha="0.3"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_update_date"
                android:textSize="14sp"
                android:textColor="@color/mainTextColor"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/appDetailUpdateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/subTextColor"
                android:textSize="12sp"
                android:text="High"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/subTextColor"
                android:alpha="0.3"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>